--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
     "@hapi/joi": "^17.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^8.2.9",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
     "uuid": "^8.3.2"
