--- a/functions/package.json
+++ b/functions/package.json
@@ -20,6 +20,7 @@
     "firebase": "^8.2.9",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
+    "lodash": "^4.17.21",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
