--- a/tenderd-client/package.json
+++ b/tenderd-client/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "uniqid": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
